--- a/configure.conf
+++ b/configure.conf
@@ -1,8 +1,18 @@
 {
-	"SYSTEM_VERSION" : "1",
+	"SYSTEM_VERSION" : "1", // Do not change this.
 	"EXT_VAR":{
-		"ROOT" : "C:/Users/siras/Desktop/nook_pipeline/test_projects"
+		"ROOT" : "C:/Users/siras/Downloads/projects_test"
 	},
-	"PATH_TEMPLATE" : "${ROOT}/${_PROJECTSNAME}/0_COMP/${_SHOTSNAME}/${_SCRIPTNAME}",
-	"SCRIPTNAME_TEMPLATE" : "${_PROJECTSCODE}_${_SHOTSNAME}_V${_VERSION}.${_EXTENSION}"
+	
+	// Variable:
+	// ROOT : Root directory, Contain project folders
+	// _PROJECTSNAME : project name
+	// _PROJECTSCODE : Project's shortcut
+	// _SHOTSNAME : Shot name
+	// _SCRIPTNAME : Nuke script name
+	// 
+	// _VERSION : version of nuke file
+	// _EXTENSION : nk, nknc
+	"PATH_TEMPLATE" : "${ROOT}/${_PROJECTSNAME}/COMP/${_SHOTSNAME}/${_SCRIPTNAME}",
+	"SCRIPTNAME_TEMPLATE" : "${_SHOTSNAME}_V${_VERSION}.${_EXTENSION}"
 }
